make send and verify end-points
