# docs/swagger.json
@@ -7,7 +7,7 @@
     "paths": {
         "/send": {
             "post": {
-                "description": "Отправляет код двухфакторной авторизации, возвращая id запроса и сам код\nКод ошибки 400: неверный json или невалидный номер",
+                "description": "Отправляет код двухфакторной авторизации, возвращая id запроса и сам код\nКод ошибки 400: неверный json",
                 "consumes": [
                     "application/json"
                 ],
@@ -41,13 +41,16 @@
                         "schema": {
                             "$ref": "#/definitions/two-factor-auth_internal_api.Error"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
         },
         "/verify": {
             "post": {
-                "description": "Верифицирует код двухфакторной авторизации, возвращая текущую дату в UnixTime\nКод ошибки 400: неверный json или невалидный код авторизации\nКод ошибки 403: исчерпан лимит попыток или код уже не действителен",
+                "description": "Верифицирует код двухфакторной авторизации, возвращая текущую дату в UnixTime\nКод ошибки 400: неверный json\nКод ошибки 403: исчерпан лимит попыток или неверный код",
                 "consumes": [
                     "application/json"
                 ],
@@ -87,6 +90,9 @@
                         "schema": {
                             "$ref": "#/definitions/internal_api.Error"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error"
                     }
                 }
             }
